:waning_gibbous_moon: Fix some bugs and add new feature: store dark mode option on localstorage

--- a/style.css
+++ b/style.css
@@ -126,7 +126,12 @@ a:hover {
   color: var(--light-green);
 }
 
-button {
+.button {
+  cursor: pointer;
+}
+
+button, 
+.button.save {
   background: var(--green);
   width: 100%;
   height: 50px;
@@ -142,11 +147,29 @@ button:hover {
   background: var(--light-green);
 }
 
+.button.save {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.8;
+  transition: opacity 0.3s;
+}
+
+.button.save:hover {
+  opacity: 1;
+}
+
 .button.new {
   display: inline-block;
   margin-bottom: 0.8rem;
   opacity: 0;
   animation: to-left 1s forwards 0.6s;
+  transition: color 0.3s;
+  color: var(--green);
+}
+
+.button.new:hover {
+  color: var(--light-green);
 }
 
 .button.cancel {
@@ -365,6 +388,10 @@ input {
 
 .dark input {
   color: #ffffff;
+}
+
+input[type="submit"] {
+  font-size: 1.2rem;
 }
 
 .input-group {
